# glyphterm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/glyphterm-cli/: Cargo.toml
apps/glyphterm-cli/src/: main.rs
apps/glyphterm-desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/glyphterm-desktop/src/: main.ts  styles.css  terminal.ts  vite-env.d.ts
apps/glyphterm-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/glyphterm-desktop/src-tauri/capabilities/: default.json
apps/glyphterm-desktop/src-tauri/src/: fs_api.rs  lib.rs  lsp.rs  main.rs
apps/glyphterm-desktop/src/app/: classic-app.ts  workspace-app.ts
apps/glyphterm-desktop/src/editor/: diagnostics.ts  language-service.ts  lsp-providers.ts  monaco-theme.ts  monaco.ts  rust-lsp-client.ts
apps/glyphterm-desktop/src/fs/: client.ts  workspace-dialog.ts
apps/glyphterm-desktop/src/i18n/: index.ts
apps/glyphterm-desktop/src/i18n/locales/: en.ts  zh-Hans.ts
apps/glyphterm-desktop/src/terminal/: ai-blocks.ts  block.ts
apps/glyphterm-desktop/src/themes/: colors.ts  index.ts  manager.ts  presets.ts  types.ts
apps/glyphterm-desktop/src/ui/: bottom-panel.ts  command-palette.css  command-palette.ts  icons.ts  output-log.ts  quick-open.css  quick-open.ts  status-bar.ts  welcome.ts
apps/glyphterm-desktop/src/workspace/: bottom-panel.ts  recent-files.ts  split-resize.ts  store.ts  types.ts  workspace.css
crates/glyphgrid/: Cargo.toml
crates/glyphgrid/src/: lib.rs  selection.rs
crates/glyphterm-core/: Cargo.toml
crates/glyphterm-core/src/: frame.rs  lib.rs  local.rs  manager.rs  session.rs  ssh.rs
crates/glyphvt/: Cargo.toml
crates/glyphvt/src/: lib.rs  sgr.rs
crates/glyphvt/tests/: integration.rs
crates/glyphwidth/: Cargo.toml
crates/glyphwidth/src/: lib.rs
crates/glyphwidth/tests/: golden.rs
crates/glyphwidth/tests/golden/: cjk_sentence.txt  emoji_zwj.txt  mixed_line.txt
docs/: ARCHITECTURE.md  CJK-RENDERING.md  DEV_SETUP.md  GITHUB_SETUP.md  I18N.md  LICENSING.md  SELF_HOSTED_RUNNER.md  SSH.md  THEMES.md  WORKSPACE.md
scripts/: setup-self-hosted-runner.sh
