[workspace]
resolver = "2"
members = [
    "crates/glyphwidth",
    "crates/glyphgrid",
]
default-members = ["crates/glyphwidth", "crates/glyphgrid"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cndingbo/glyphterm"
rust-version = "1.78"

[workspace.dependencies]
unicode-width = "0.2"
unicode-segmentation = "1.12"
