[package]
name = "glyphterm-cli"
description = "GlyphTerm local terminal (development CLI)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "glyphterm"
path = "src/main.rs"

[dependencies]
glyphterm-core = { path = "../../crates/glyphterm-core" }
anyhow = "1.0"
crossterm = "0.28"
