[package]
name = "glyphwidth"
description = "Unicode display width engine for GlyphTerm — CJK-safe, policy-driven"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
unicode-width = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
